--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <td>Grasas</td>
             <td>5 gr</td>
         </tr>
+        <tr>
+            <td>Azucares</td>
+            <td>3 gr</td>
+        </tr>
     </table>
     
     <p>Quieres ver como se prepara? Mira este <a href="https://www.youtube.com/watch?v=6yuPpe-9YOQ" target="_blank">video en Youtube</a></p>
