Se agregó un formulario

--- a/index.html
+++ b/index.html
@@ -63,7 +63,19 @@
     <H3>BENFICIOS DE COMER PANQUEQUES:</H3>
     <p>Los panqueques, especialmente si están hechos con harina integral, pueden ser una opción de desayuno nutritiva, aportando carbohidratos para energía, fibra para la regulación del azúcar en sangre y nutrientes como hierro y calcio. También son versátiles, permitiendo añadir frutas, frutos secos y otros ingredientes saludables para mejorar su perfil nutricional. </p>
    
-  
+   <h4>Si deseas mas informacion llena el siguiente formulario</h4>
+   <form>
+        <label for="name">NOMBRES</label>
+        <input type="text" id="name" name="name">
+        <br>
+        <label for="apelidos">APELLIDOS</label>
+        <input type="text" id="apellidos" name="apellidos">
+        <br>
+        <label for="correo">CORREO</label>
+        <input type="text" id="correo"name="correo">
+        <br>
+        <input type="submit" value="Enviar">
+   </form>
 
    
     <footer>
